# mw-toolbox

./: .eslintcache  .gitignore  Cargo.toml  LICENSE  README.md  api_rotation.php  api_rotation_OLD.php  build-linux-cli.sh  cdn_converter.php  cdn_skinlink.php  champsById.json  champsByIdRito.json  exturlusage_output_beauty.json  fixwix.php  fixwix2.php  fixwix3.php  movelist.php  movelist.txt  movelist2.php  package-lock.json  package.json  pnpm-workspace.yaml  renovate.json  rotation.txt  todelete.txt  update discount.txt  update-discount.bat  update-discount.sh  updateChampsById.php  wapi_del.php  wapi_getImageList.php  wapi_massmove.php  wapi_massmove2.php  wapi_massmove3.php
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-server-cli.yml  format.yml  publish.yml  temp.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: client.rs  error.rs  lib.rs  pathtype.rs
core/src/api/: delete.rs  download.rs  edit.rs  list.rs  mod.rs  parse.rs  purge.rs  rename.rs  upload.rs
core/src/commands/: delete.rs  league.rs  list.rs  login.rs  mod.rs  purge.rs  rename.rs  skylords.rs  upload.rs
core/src/response/: edit.rs  list.rs  login.rs  mod.rs  parse.rs  rename.rs  upload.rs
core/src/util/: config.rs  mod.rs  pathtype.rs  props.rs  storage.rs  wiki.rs
crates/league/: Cargo.toml
crates/league/src/: lib.rs
crates/mw-tools/: Cargo.toml
crates/mw-tools/src/: client.rs  error.rs  lib.rs
crates/mw-tools/src/api/: delete.rs  download.rs  edit.rs  list.rs  parse.rs  purge.rs  rename.rs  upload.rs
crates/mw-tools/src/response/: delete.rs  download.rs  edit.rs  list.rs  login.rs  mod.rs  parse.rs  rename.rs  token.rs  upload.rs
crates/storage/: Cargo.toml
crates/storage/src/: blocking.rs  lib.rs
gui/: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  build.rs  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  setup-test.ts  snowpack.config.js  test.conf.json  tsconfig.json  vite.config.ts  web-test-runner.config.js
gui-druid/: Cargo.toml
gui-druid/src/: main.rs
gui-experimental/: Cargo.toml  build.rs
gui-experimental/src/: app.rs  style.rs
gui-orbtk/: Cargo.toml
gui-orbtk/assets/showcase/: showcase_de_DE.ron
gui-orbtk/src/: main.rs
gui/.cargo/: config.toml
gui/public/: index.html
gui/src/: App.js  App.module.css  App.test.js  App.test.tsx  App.tsx  app.rs  index.css  index.js  index.tsx  main.rs  style.rs
gui/src-tauri/: .gitignore  Cargo.toml  Tauri.linux.toml  Tauri.macos.toml  Tauri.toml  Tauri.windows.toml  _Tauri.windows.toml  tauri.conf.json
gui/src-tauri/capabilities/: desktop.json
gui/src-tauri/icons/: tauri.conf.json
gui/src-tauri/src/: cmd.rs  main.rs  menu.rs
gui/src/components/: Header.js  Header.tsx  Output.tsx  index.ts
gui/src/components/Header/: Header.module.css  Header.tsx
gui/src/components/feedback/: index.ts
gui/src/components/feedback/Badge/: Badge.module.css  Badge.tsx
gui/src/components/feedback/Spinner/: Spinner.module.css  Spinner.tsx
gui/src/components/feedback/Toast/: Toast.module.css  Toast.tsx  ToastManager.tsx
gui/src/components/forms/: index.ts
gui/src/components/forms/Button/: Button.module.css  Button.tsx
gui/src/components/forms/Checkbox/: Checkbox.module.css  Checkbox.tsx
gui/src/components/forms/Input/: Input.module.css  Input.tsx
gui/src/components/forms/Label/: Label.module.css  Label.tsx
gui/src/components/forms/Select/: Select.module.css  Select.test.tsx  Select.tsx
gui/src/components/forms/Textarea/: Textarea.module.css  Textarea.tsx
gui/src/components/icons/: CloseIcon.tsx  PlusIcon.tsx  index.ts
gui/src/components/layout/: index.ts
gui/src/components/layout/Divider/: Divider.module.css  Divider.tsx
gui/src/components/layout/Header/: Header.module.css  Header.tsx  Menu.module.css  Menu.tsx
gui/src/components/layout/Modal/: Modal.module.css  Modal.tsx
gui/src/helpers/: array.tsx  consts.ts  invoke.ts  toast.tsx  types.ts
gui/src/pages/: Account.js  Delete.js  Download.js  Edit.js  List.js  Move.js  Purge.js  Upload.js  index.js
gui/src/pages/Account/: Account.module.css  Account.tsx  index.js
gui/src/pages/Delete/: Delete.js  Delete.module.css  Delete.tsx
gui/src/pages/Download/: Download.js  Download.module.css  Download.tsx
gui/src/pages/Edit/: Edit.js  Edit.module.css  Edit.tsx  FindReplaceModal.js  FindReplaceModal.module.css  FindReplaceModal.tsx  index.js
gui/src/pages/List/: List.js  List.module.css  List.tsx
gui/src/pages/Move/: Move.module.css  Move.tsx  index.js
gui/src/pages/Purge/: Purge.js  Purge.module.css  Purge.tsx
gui/src/pages/Upload/: FileList.module.css  FileList.tsx  Upload.js  Upload.module.css  Upload.tsx
gui/test/: setup.ts
gui/types/: static.d.ts
league/: Cargo.toml
league/src/: lib.rs
old stuff/: wapi_del.php
public/: index.html
skylords/: Cargo.toml
skylords/src/: lib.rs
src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/commands/: delete.rs  league.rs  list.rs  massmove.rs  mod.rs  rename.rs  rotation.rs  skylords.rs  test.rs  update.rs  upload.rs
src/components/: Header.js  Purge.js  index.js
src/components/sections/: Header.js  Header.tsx
src/gui/: app.rs  azul.rs  iced.rs  mod.rs  style.rs
src/helpers/: error.rs  mod.rs  wiki.rs
src/pages/: Account.js  Account.tsx  Delete.js  Delete.tsx  Download.js  Edit.js  Home.js  Home.tsx  List.js  List.tsx  Move.js  Other.js  Purge.js  Upload.js  index.js
src/util/: error.rs  mod.rs  props.rs  wiki.rs
storage/: Cargo.toml
storage/src/: lib.rs
tools/: Cargo.toml
tools/src/: main.rs
wapi/: Cargo.toml
wapi/src/: main.rs
wtools/src/commands/: delete.rs  mod.rs  rotation.rs
wtools/src/helpers/: wiki.rs
