[workspace]
members = [
  "cli",
  "crates/mw-tools",
  "crates/storage",
  "gui/src-tauri",
]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
codegen-units = 1 
lto = true 
opt-level = "s" #"z"
panic = "abort"
