[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
default-run = "cli"
edition = "2018"
name = "cli"
publish = false
version = "0.1.0"

[features]
server = ["riot-api", "league-wiki"]

league-wiki = ["league"]
riot-api = ["league/riot-api"]

[dependencies]
league = {path = "../league", optional = true}
wtools = {path = "../core"}

clap = "3.0.0-beta.2"
env_logger = "0.8"
serde_json = {version = "1.0", features = ["preserve_order"]}
tokio = {version = "0.2", features = ["fs", "macros"]}
