[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
default-run = "mw-cli"
edition = "2018"
name = "mw-cli"
publish = false
version = "0.1.0"

[features]
server = ["riot-api", "league-wiki"]

league-wiki = ["league", "sysinfo"]
riot-api = ["league/riot-api"]

[dependencies]
league = {path = "../crates/league", optional = true}
mw-tools = {path = "../crates/mw-tools"}

anyhow = "1"
clap = "3.0.0-beta.2"
env_logger = "0.8"
serde_json = {version = "1.0", features = ["preserve_order"]}
sysinfo = {version = "0.18", optional = true}
tokio = {version = "1", features = ["fs", "macros", "rt-multi-thread"]}
