[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
default-run = "mw-cli"
edition = "2021"
name = "mw-cli"
publish = false
version = "0.1.0"

[dependencies]
mw-tools = {path = "../crates/mw-tools"}

anyhow = "1"
clap = {version = "3.0.1", features = ["derive", "env"]}
pretty_env_logger = "0.4"
serde_json = {version = "1.0"}
tokio = {version = "1", features = ["fs", "macros", "rt-multi-thread"]}
