[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
license = "MIT"
name = "wtools"
version = "0.1.0"

[dependencies]
log = "0.4"
reqwest = {version = "0.10", features = ["json", "cookies"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
thiserror = "1.0"
tokio = {version = "0.2", features = ["fs", "time"]}
urlencoding = "1"
