[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
license = "MIT"
name = "wtools"
version = "0.1.0"

[dependencies]
log = "0.4"
reqwest = {version = "0.11", features = ["json", "cookies", "multipart"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
thiserror = "1.0"
tokio = {version = "1.0", features = ["fs", "time"]}
urlencoding = "1.1"
