[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
license = "MIT"
name = "mw-tools"
version = "0.1.0"

[dependencies]
directories-next = "2"
log = "0.4"
reqwest = {version = "0.11", features = ["json", "cookies", "multipart"]}
serde = "1.0"
thiserror = "1.0"
tokio = {version = "1.1", features = ["fs", "time"]}
