[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "gui-druid"
publish = false
version = "0.1.0"

[dependencies]
storage = {path = "../storage"}
wtools = {path = "../core"}

anyhow = "1"
directories = "3"
druid = {git = "https://github.com/linebender/druid.git", branch = "master"}
tokio = "0.3"
