[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
build = "build.rs"
edition = "2018"
name = "gui-experimental"
publish = false
version = "0.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
storage = {path = "../storage"}
wtools = {path = "../core"}

anyhow = "1"
directories = "3"
iced = {git = "https://github.com/hecrj/iced.git", branch = "master", default-features = false, features = ["tokio_old", "glow", "glow_default_system_font"]}
native-dialog = {version = "0", features = ["windows_dpi_awareness", "windows_visual_styles"]}
tokio = "0.2"
