[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "gui-orbtk"
publish = false
version = "0.1.0"

[dependencies]
storage = {path = "../storage"}
wtools = {path = "../core"}

anyhow = "1"
directories = "3"
orbtk = {git = "https://github.com/redox-os/orbtk.git", branch = "develop"}
tokio = "0.2"
