[package]
name = "gui"
version = "0.1.0"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
publish = false
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
wtools = { path = "../core" }

tokio = { version = "0.2", features = ["macros", "fs", "time"] }
iced = { git = "https://github.com/hecrj/iced.git", branch = "master", features = ["tokio", "glow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
directories = "3"
native-dialog = { version = "0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
base64 = "0.12"