[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
build = "build.rs"
edition = "2018"
name = "gui"
publish = false
version = "0.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
storage = { path = "../storage" }
wtools = { path = "../core" }

anyhow = "1"
directories = "3"
iced = { git = "https://github.com/hecrj/iced.git", branch = "master", features = ["tokio", "glow"] }
native-dialog = { version = "0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
once_cell = "1.4"
tokio = "0.2"