[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "league"
publish = false
version = "0.1.0"

[features]
riot-api = []

[dependencies]
wtools = {path = "../core"}

anyhow = "1.0"
base64 = "0.13"
chrono = "0.4"
full_moon = "0.6"
futures = "0.3"
regex = "1.3"
reqwest = {version = "0.10", features = ["json", "cookies"]}
rlua = {version = "0.17"}
select = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
tokio = {version = "0.3", features = ["fs", "io-util", "time"]}
