[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "league"
publish = false
version = "0.1.0"

[features]
riot-api = []

[dependencies]
wtools = {path = "../core"}

anyhow = "1.0"
base64 = "0.13"
chrono = {version = "0.4", features = ["unstable-locales"]}
futures = "0.3"
log = "0.4"
regex = "1.3"
reqwest = {version = "0.10", features = ["json", "cookies"]}
select = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
tokio = {version = "0.2", features = ["fs", "io-util", "time"]}
