[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
build = "src/build.rs"
default-run = "wtools-tauri"
description = "A Tauri App"
edition = "2018"
license = "MIT"
name = "wtools-tauri"
version = "0.1.0"

[dependencies]
async-std = {version = "1", features = ["tokio02"]}
futures = "0.3"
pretty_env_logger = "0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "0.10", features = ["all-api"]}
wtools = {path = "../../wtools/core", git = "https://github.com/FabianLars/wtools"}

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = ["tauri/embedded-server"]

[[bin]]
name = "wtools-tauri"
path = "src/main.rs"
