[package]
authors = [ "FabianLars <fabianlars@fabianlars.de>" ]
build = "src/build.rs"
default-run = "wtools-tauri"
description = "A Tauri App"
edition = "2018"
license = "MIT"
name = "wtools-tauri"
version = "0.1.0"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
futures = "0.3"
native-dialog = { version = "0.5", features = [ "windows_dpi_awareness", "windows_visual_styles" ] }
pretty_env_logger = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
storage = { git = "https://github.com/FabianLars/wtools" }
tauri = { version = "0.11", features = [ "event" ] }
tokio = { version = "1", features = [ "rt-multi-thread" ] }
wtools = { git = "https://github.com/FabianLars/wtools" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]

[[bin]]
name = "wtools-tauri"
path = "src/main.rs"
