[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "storage"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1"
chacha20poly1305 = "0.7"
directories = "3"
rand = "0.7"
rand_chacha = "0.3"
tokio = {version = "0.2", features = ["fs", "io-util", "macros"]}
