[package]
name = "wapi"
version = "0.1.0"
authors = ["FabianLars"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"