[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "league"
publish = false
version = "0.1.0"

[features]
riot-api = []

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["unstable-locales"] }
futures = "0.3"
log = "0.4"
mw-tools = { path = "../mw-tools" }
regex = "1.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
select = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["fs", "io-util", "time"] }
