[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
license = "MIT"
name = "mw-tools"
version = "0.1.0"

[dependencies]
directories-next = "2"
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}
log = "0.4"
regex = "1"
reqwest = {version = "0.11", features = ["json", "cookies", "multipart"]}
serde = "1.0"
serde_json = "1"
thiserror = "1.0"
tokio = {version = "1", features = ["fs", "time"]}
