[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2021"
license = "MIT"
name = "mw-tools"
version = "0.1.0"

[dependencies]
directories-next = "2"
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}
log = "0.4"
regex = "1"
reqwest = {version = "0.12", features = ["json", "cookies", "multipart"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2"
tokio = {version = "1", features = ["fs", "time"]}
