[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "storage"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chacha20poly1305 = "0.7"
dirs-next = "2"
rand = "0.8"
rand_chacha = "0.3"
tokio = { version = "1.1", features = ["fs", "io-util", "macros"] }
