[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2018"
name = "storage"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chacha20poly1305 = "0.8"
dirs-next = "2"
log = "0.4"
once_cell = "1.7"
rand = "0.8"
rand_chacha = "0.3"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.1", features = ["fs", "io-util", "macros", "rt-multi-thread"]}
