[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
edition = "2021"
name = "storage"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chacha20poly1305 = "0.10"
dirs-next = "2"
once_cell = "1.16"
rand_chacha = "0.3"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["fs", "io-util"]}

[dev-dependencies]
rand = "0.8"
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
