[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
build = "src/build.rs"
description = "mw-toolbox GUI"
edition = "2021"
license = "MIT"
name = "mw-toolbox"
publish = false
version = "0.1.0"

[features]
# default = [ "custom-protocol" ]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
#tauri-build = {path = "../../../tauri/core/tauri-build", features = [] }
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
anyhow = "1"
mw-tools = {path = "../../crates/mw-tools"}
once_cell = "1.10"
parking_lot = "0.11"
pretty_env_logger = "0.4"
regex = "1.5"
reqwest = "0.11"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
storage = {path = "../../crates/storage"}
tauri = {version = "1.0.0-rc.4", features = ["dialog-open", "reqwest-client", "shell-open", "updater"] }
#tauri = {path = "../../../tauri/core/tauri", features = ["dialog-open", "reqwest-client", "shell-open", "updater"] }
#tauri = {git="https://github.com/tauri-apps/tauri", branch="dev", features = ["dialog-open", "reqwest-client", "shell-open", "updater"] }
tokio = {version = "1", features = ["sync", "time"] }
unescape = "0.1"

[[bin]]
name = "mw-toolbox"
path = "src/main.rs"
