[package]
authors = ["FabianLars <fabianlars@fabianlars.de>"]
build = "src/build.rs"
description = "mw-toolbox GUI"
edition = "2021"
license = "MIT"
name = "mw-toolbox"
publish = false
version = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
mw-tools = {path = "../../crates/mw-tools"}
once_cell = "1"
parking_lot = "0.12"
pretty_env_logger = "0.5"
regex = "1"
reqwest = "0.13"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
storage = {path = "../../crates/storage"}
tauri = {version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = {version = "1", features = ["sync", "time"] }
unescape = "0.1"

[[bin]]
name = "mw-toolbox"
path = "src/main.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
